src/trace/snapshots/forge__trace__formatter__tests__format_empty_report.snap
---
source: src/trace/formatter.rs
expression: output
---
OSCAL Element ID  Element Type  Source Section  Source Line
----------------  ------------  --------------  -----------

Summary: 0 elements, 0 mapped, 0 unmapped (0.0% coverage)
