src/trace/snapshots/forge__trace__formatter__tests__format_with_unmapped_entries.snap
---
source: src/trace/formatter.rs
expression: output
---
OSCAL Element ID  Element Type  Source Section  Source Line
----------------  ------------  --------------  -----------
POL-AC-001        control       Access Control  10         
POL-AC-002        control       [unmapped]      [unmapped] 

Summary: 2 elements, 1 mapped, 1 unmapped (50.0% coverage)
